chore: update setup page

--- a/apps/www/content/docs/03.setup.md
+++ b/apps/www/content/docs/03.setup.md
@@ -42,3 +42,36 @@ You can install ElevenLabs UI Vue components using either the `elevenlabs-ui-vue
 The CLI will download the component's code and integrate it into your project's directory (usually under your components folder).
 
 After running the command, you should see a confirmation in your terminal that the files were added. You can then proceed to use the component in your code.
+
+## Configure Nuxt Shadcn Module
+
+To ensure that Elevenlabs UI Vue components are properly registered and avoid console warnings from Nuxt's auto-import feature, you need to modify your nuxt.config.ts to add the AI Elements directory to the shadcn module configuration.
+
+```ts
+export default defineNuxtConfig({
+  // ...
+  modules: ['shadcn-nuxt'],
+  shadcn: {
+    /**
+     * Prefix for all the imported component.
+     * @default "Ui"
+     */
+    prefix: '',
+    /**
+     * Directory that the component lives in.
+     * Will respect the Nuxt aliases.
+     * @link https://nuxt.com/docs/api/nuxt-config#alias
+     * @default "@/components/ui"
+     */
+    componentDir: '@/components/ui',
+    componentDir: [
+      '@/components/ui',
+      // Elevenlabs UI elements
+      {
+        path: '@/components/elevenlabs-ui',
+        prefix: '',
+      },
+    ],
+  }
+})
+```
