docs: remove redundant `componentDir` config

--- a/apps/www/content/docs/03.setup.md
+++ b/apps/www/content/docs/03.setup.md
@@ -63,10 +63,9 @@ export default defineNuxtConfig({
      * @link https://nuxt.com/docs/api/nuxt-config#alias
      * @default "@/components/ui"
      */
-    componentDir: '@/components/ui',
     componentDir: [
       '@/components/ui',
-      // Elevenlabs UI elements
+      // Elevenlabs UI
       {
         path: '@/components/elevenlabs-ui',
         prefix: '',
