docs: clean up introduction page

--- a/apps/www/content/docs/04.usage.md
+++ b/apps/www/content/docs/04.usage.md
@@ -13,7 +13,7 @@ After installing ElevenLabs UI Vue components, you can use them in your applicat
 
 ```vue
 <script setup lang="ts">
-import { Card } from "@repo/shadcn-vue/components/ui/card"
+import { Card } from "@/components/ui/card"
 import { Orb } from "@/components/elevenlabs-ui/orb"
 </script>
 
