--- a/apps/www/content/docs/01.introduction.md
+++ b/apps/www/content/docs/01.introduction.md
@@ -6,7 +6,6 @@ description: Introduction
 ElevenLabs UI Vue is a component library and custom registry built on top of [shadcn-vue](https://shadcn-vue.com) to help you build multimodal agentic experiences faster.
 It provides pre-built components for agents, transcription, audio & more.
 
-
 Components are available via the `elevenlabs-ui-vue` command.
 
 ```bash
@@ -19,32 +18,4 @@ For example, to install the [Orb](/docs/components/orb) component, you can run:
 npx elevenlabs-ui-vue@latest add orb
 ```
 
-Here are some basic examples of what you can achieve using components from ElevenLabs UI Vue.
-
-<!-- [Voice Chat](/blocks#voice-chat-01)
-
-<ComponentPreview
-  name="voice-chat-01"
-  title="Voice Chat"
-  hideCode={true}
-  description="A voice chat interface."
-/>
-[Transcriber](/blocks#transcriber-01)
-
-<ComponentPreview
-  name="transcriber-01"
-  title="Transcriber"
-  hideCode={true}
-  description="A transcriber interface."
-/>
-
-[Voice Form](/blocks#voice-form-01)
-
-<ComponentPreview
-  name="voice-form-01"
-  title="Voice Form"
-  hideCode={true}
-  description="A voice form interface."
-/> -->
-
-You can explore more examples [here](/blocks) or view the [source code](https://github.com/vuepont/elevenlabs-ui-vue) for all components on GitHub.
+You can explore more blocks [here](/blocks) or view the [source code](https://github.com/vuepont/elevenlabs-ui-vue) on GitHub.
