fix(cli): add support for new all.json registry format

--- a/apps/www/content/docs/03.setup.md
+++ b/apps/www/content/docs/03.setup.md
@@ -34,7 +34,7 @@ You can install ElevenLabs UI Vue components using either the `elevenlabs-ui-vue
 
   ::tabs-content{value="shadcn"}
     ```bash
-    npx shadcn@latest add https://elevenlabs-ui-vue.com/orb.json
+    npx shadcn-vue@latest add https://registry.elevenlabs-ui-vue.com/orb.json
     ```
   ::
 ::
@@ -45,7 +45,7 @@ After running the command, you should see a confirmation in your terminal that t
 
 ## Configure Nuxt Shadcn Module
 
-To ensure that Elevenlabs UI Vue components are properly registered and avoid console warnings from Nuxt's auto-import feature, you need to modify your nuxt.config.ts to add the AI Elements directory to the shadcn module configuration.
+To ensure that ElevenLabs UI Vue components are properly registered and avoid console warnings from Nuxt's auto-import feature, you need to modify your nuxt.config.ts to add the ElevenLabs UI components directory to the shadcn module configuration.
 
 ```ts
 export default defineNuxtConfig({
