--- a/apps/www/content/docs/05.troubleshooting.md
+++ b/apps/www/content/docs/05.troubleshooting.md
@@ -23,7 +23,7 @@ npx elevenlabs-ui-vue@latest add orb
 
 ## Theme switching doesn’t work — my app stays in light mode
 
-Ensure your app is using the same data-theme system that shadcn-vue and AI Elements expect. The default implementation toggles a data-theme attribute on the `<html>` element. Make sure your tailwind.config.js is using class or data- selectors accordingly:
+Ensure your app is using the same data-theme system that shadcn-vue and ElevenLabs UI Vue expect. The default implementation toggles a data-theme attribute on the `<html>` element. Make sure your tailwind.config.js is using class or data- selectors accordingly:
 
 ## The component imports fail with “module not found”
 
